Prevent navigators from horizontal scrolling

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -12,6 +12,7 @@ body {
     color: #000;
     background-color: #fff;
     text-align: justify;
+    overflow-x: hidden; 
 }
 
 .container {
